# pico_sevseg

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
docs/html/: annotated.html  classes.html  dir_2126e4bec0893759859ad5a03f41f548.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  main_8c.html  md_README.html  pages.html  sevseg_8c.html  sevseg_8h.html  sevseg_8h_source.html  structSevseg.html  structsevseg__typedef.html
docs/html/search/: all_3.js  all_4.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  functions_0.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
lib/sevseg/: CMakeLists.txt  sevseg.c  sevseg.h
src/: CMakeLists.txt  main.c
